<?xml version="1.0" encoding="utf-8"?>
<com.medlinker.widget.shape.ShapeLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:sp_solid="@color/white"
    app:sp_topLeftRadius="@dimen/dp_10"
    app:sp_topRightRadius="@dimen/dp_10">

    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:gravity="center"
        android:text="@string/camera"
        android:textColor="@color/ui_black1"
        android:textSize="@dimen/sp_16" />

    <com.medlinker.widget.line.UiLineView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_album"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:gravity="center"
        android:text="@string/album"
        android:textColor="@color/ui_black1"
        android:textSize="@dimen/sp_16" />

    <com.medlinker.widget.line.UiLineView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:gravity="center"
        android:padding="@dimen/dp_16"
        android:text="@string/cancel"
        android:textColor="@color/ui_black3"
        android:textSize="@dimen/sp_16" />
</com.medlinker.widget.shape.ShapeLinearLayout>