<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f7f8"
    android:orientation="vertical">

    <com.medlinker.widget.shape.ShapeLinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        app:sp_gradientAngle="-90"
        app:sp_gradientEndColor="#F6F7F8"
        app:sp_gradientStartColor="#DFDAFF"
        app:sp_gradientType="linear" />

    <LinearLayout
        android:id="@+id/rl_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_44"
        android:layout_marginEnd="@dimen/dp_16"
        android:gravity="center_vertical">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_header"
            android:layout_width="@dimen/dp_58"
            android:layout_height="@dimen/dp_58"
            android:src="@mipmap/icon_user_head"
            app:riv_border_color="#fff"
            app:riv_border_width="1dp"
            app:riv_corner_radius="@dimen/dp_30" />

        <TextView
            android:id="@+id/tv_nick_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_11"
            android:layout_weight="1"
            android:textColor="#2A2A2A"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            tools:text="用户名" />

        <TextView
            android:id="@+id/tv_modify_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_edit"
            android:drawablePadding="@dimen/dp_2"
            android:gravity="center_vertical"
            android:text="@string/edit_info"
            android:textColor="#6A6A6A"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <com.medlinker.widget.shape.ShapeLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_info"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_16"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_13"
        app:sp_radius="@dimen/dp_10"
        app:sp_solid="#fff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_15"
            android:text="@string/common_fun"
            android:textColor="#2A2A2A"
            android:textSize="@dimen/dp_16"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/ic_setting"
                android:drawablePadding="@dimen/dp_5"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/ui_black2"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_customer_service"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/ic_kefu"
                android:drawablePadding="@dimen/dp_5"
                android:gravity="center"
                android:text="@string/my_customer_service"
                android:textColor="@color/ui_black2"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>
    </com.medlinker.widget.shape.ShapeLinearLayout>
</RelativeLayout>