<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f7f8"
    android:orientation="vertical"
    tools:context=".mine.setting.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_15">

        <LinearLayout
            android:id="@+id/rl_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:visibility="visible">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/message_notify"
                android:textColor="@color/ui_black2"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/tv_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="去开启"
                android:textColor="@color/ui_black1"
                android:textSize="@dimen/sp_15" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:src="@mipmap/ic_right_arrow" />
        </LinearLayout>

        <com.medlinker.widget.line.UiLineView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/rl_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/version_info"
                android:textColor="@color/ui_black2"
                android:textSize="@dimen/sp_15" />

            <com.medlinker.widget.shape.ShapeTextView
                android:id="@+id/tv_has_new_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_8"
                android:paddingLeft="@dimen/dp_6"
                android:paddingTop="1dp"
                android:paddingRight="@dimen/dp_6"
                android:paddingBottom="1dp"
                android:text="新版"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_42"
                android:visibility="gone"
                app:sp_radius="@dimen/dp_3"
                app:sp_solid="#ffc002"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ui_black1"
                android:textSize="@dimen/sp_15"
                tools:text="1.0.0" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:src="@mipmap/ic_right_arrow" />
        </LinearLayout>

        <com.medlinker.widget.line.UiLineView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/rl_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear_cache"
                android:textColor="@color/ui_black2"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/tv_cache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ui_black1"
                android:textSize="@dimen/sp_15"
                tools:text="43M" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:src="@mipmap/ic_right_arrow" />
        </LinearLayout>

        <com.medlinker.widget.line.UiLineView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/rl_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16">

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="关于我们"
                android:textColor="@color/ui_black2"
                android:textSize="@dimen/sp_15" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:src="@mipmap/ic_right_arrow" />
        </LinearLayout>

        <com.medlinker.widget.line.UiLineView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/rl_cancellation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16">

            <TextView
                android:id="@+id/tv_cancellation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="注销账户"
                android:textColor="@color/ui_black2"
                android:textSize="@dimen/sp_15" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:src="@mipmap/ic_right_arrow" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/ui_red"
        android:textSize="@dimen/sp_16" />
</LinearLayout>